namespace Pomodoro.Core;

public enum PomodoroState
{
    ShortBreak,
    Pending,
    Work,
    LongBreak
}