@startuml
namespace Core {
    class Pomodoro
    class AlreadyInProgressException
    enum PomodoroState 
    interface ITimer


    Pomodoro -l> ITimer
    Pomodoro --> PomodoroState
    Pomodoro --> AlreadyInProgressException
}

namespace CLI {
    class TimerImpl implements Core.ITimer
    class Program 
    
    Program --> Core.Pomodoro
    Program --> TimerImpl
}



@enduml